// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1fygwpk-variantStyles-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1mxuj9o-sizeStyles {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1mxuj9o-sizeStyles.cache-1mxuj9o-sizeStyles {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      type="radio"
    >
      <label
        class="e1duuirp2 e1g1zfwd0 cache-1fygwpk-variantStyles-activeFocusClass"
        for="test-test"
      >
        <div
          class="cache-tn3xtd e1duuirp3"
        >
          <svg
            class="e1duuirp4 etwatq50 cache-1mxuj9o-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div>
          Radio field
        </div>
        <input
          aria-checked="false"
          class="cache-cujed6 e1duuirp1"
          id="test-test"
          name="test"
          tabindex="0"
          type="radio"
          value="test"
        />
      </label>
      <div
        class="e14o3tsk0 cache-x3o9mj"
      >
        <div
          class="cache-4136x1 e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1fygwpk-variantStyles-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-y3mcs0-sizeStyles {
  fill: #390171;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-y3mcs0-sizeStyles.cache-y3mcs0-sizeStyles {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      type="radio"
    >
      <label
        class="e1duuirp2 e1g1zfwd0 cache-1fygwpk-variantStyles-activeFocusClass"
        for="test-checked"
      >
        <div
          class="cache-tn3xtd e1duuirp3"
        >
          <svg
            class="e1duuirp4 etwatq50 cache-y3mcs0-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        <div>
          Radio field checked
        </div>
        <input
          aria-checked="true"
          checked=""
          class="cache-cujed6 e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
      </label>
      <div
        class="e14o3tsk0 cache-x3o9mj"
      >
        <div
          class="cache-4136x1 e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-wuvdg2-variantStyles-disabledClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-xpw460-sizeStyles {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-xpw460-sizeStyles.cache-xpw460-sizeStyles {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      type="radio"
    >
      <label
        class="e1duuirp2 e1g1zfwd0 cache-wuvdg2-variantStyles-disabledClass"
        disabled=""
        for="test-disabled"
      >
        <div
          class="cache-tn3xtd e1duuirp3"
        >
          <svg
            class="e1duuirp4 etwatq50 cache-xpw460-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div>
          Radio field disabled
        </div>
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-cujed6 e1duuirp1"
          disabled=""
          id="test-disabled"
          name="test"
          style="pointer-events: none;"
          type="radio"
          value="disabled"
        />
      </label>
      <div
        class="e14o3tsk0 cache-x3o9mj"
      >
        <div
          class="cache-4136x1 e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-1fygwpk-variantStyles-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-xchwyz-sizeStyles {
  fill: #cc4e18;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-xchwyz-sizeStyles.cache-xchwyz-sizeStyles {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-bnyspz {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      required=""
      type="radio"
    >
      <label
        class="e1duuirp2 e1g1zfwd0 cache-1fygwpk-variantStyles-activeFocusClass"
        for="test-checked"
      >
        <div
          class="cache-tn3xtd e1duuirp3"
        >
          <svg
            class="e1duuirp4 etwatq50 cache-xchwyz-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div>
          Radio field error
        </div>
        <input
          aria-checked="false"
          class="cache-cujed6 e1duuirp1"
          id="test-checked"
          name="test"
          tabindex="0"
          type="radio"
          value="checked"
        />
      </label>
      <div
        class="e14o3tsk0 cache-bnyspz"
      >
        <div
          class="cache-4136x1 e1duuirp0"
        >
          This field is required
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1fygwpk-variantStyles-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-1fygwpk-variantStyles-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1fygwpk-variantStyles-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-y3mcs0-sizeStyles {
  fill: #390171;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-y3mcs0-sizeStyles.cache-y3mcs0-sizeStyles {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      type="radio"
    >
      <label
        class="e1duuirp2 e1g1zfwd0 cache-1fygwpk-variantStyles-activeFocusClass"
        for="test-events"
      >
        <div
          class="cache-tn3xtd e1duuirp3"
        >
          <svg
            class="e1duuirp4 etwatq50 cache-y3mcs0-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        <div>
          Radio field events
        </div>
        <input
          aria-checked="true"
          class="cache-cujed6 e1duuirp1"
          id="test-events"
          name="test"
          tabindex="0"
          type="radio"
          value="events"
        />
      </label>
      <div
        class="e14o3tsk0 cache-x3o9mj"
      >
        <div
          class="cache-4136x1 e1duuirp0"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
